# engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  todo.txt
include/allegro5/platform/: alplatf.h
lib/win64/: allegro.lib  allegro_acodec.lib  allegro_audio.lib  allegro_color.lib  allegro_dialog.lib  allegro_font.lib  allegro_image.lib  allegro_main.lib  allegro_memfile.lib  allegro_primitives.lib
src/: action.hh  actor.cc  actor.hh  align.hh  app.cc  app.hh  bitvector.hh  camera.hh  color.hh  context.cc  context.hh  display.hh  entity.hh  event_queue.hh  eventqueue.hh  font.hh  grid2.hh  grid3.hh  inputlog.hh  keyboard.cc  keyboard.hh  layout.cc  layout.hh  main.cc  mainmenu.hh  math.hh  mouse.hh  move.hh  panel.hh  range2.hh  range3.hh  rectangle.hh  render.hh  sparseset.hh  string.hh  text-editor.cc  text-editor.hh  text-effect.cc  text-effect.hh  text.cc  (+10 more)
src/alxx/: core.hh  display.hh  eventqueue.hh  font.hh  io.hh  timer.hh
src/backburner/: idk.hh  input_context.hh  input_handler.hh  mouse.hh  player.hh
